examples/test/testpolicy8219.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8219
  namespace: namespace465
spec:
  podSelector:
    matchLabels:
      key1: value24
      key49: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value15
          key41: value24
          key10: value5
      podSelector:
        matchLabels:
          key9: value1
          key42: value21
          key23: value47
